# avitoparser

./: .gitignore  README.md  __init__.py  avito.py  exceptions.py  logger.py  model.py  pyproject.toml  requirements.txt  setup.py
avitoparser/: __init__.py  avito.py  exceptions.py  logger.py  model.py
